<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".CambiarPassword">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/MisCredencialesTXT"
            android:text="@string/MisCredencialesTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#000"/>

        <!--CORREO ACTUAL DE LA BD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/CorreoActualTXT"
                android:text="@string/CorreoActualTXT"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/CorreoActual"
                android:text="@string/CorreoActual"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--CONTRASEÑA ACTUAL DE LA BD-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PassActualTXT"
                android:text="@string/PassActualTXT"
                android:textSize="20sp"
                android:textColor="#000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/PassActual"
                android:text="@string/PassActual"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--INGRESAR CONTRASEÑA ACTUAL-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/ActualPassET"
                android:hint="@string/ActualPassET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--INGRESAR NUEVA CONTRASEÑA-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/NuevoPassET"
                android:hint="@string/NuevoPassET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--BOTÓN PARA CAMBIAR CONTRASEÑA-->
        <Button
            android:text="@string/CAMBIARPASSBTN"
            android:layout_marginTop="15dp"
            android:background="@drawable/boton_personalizado"
            android:textColor="#fff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@null"
            app:icon="@drawable/pass_ico"
            android:onClick="cambia"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>