<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Registro">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        //Titulo
        <TextView
            android:id="@+id/RegistroTXT"
            android:text="@string/RegistroTXT"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        //Imagen
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/register"/>

        //Correo
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:inputType="textWebEmailAddress"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        //Contraseña
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        //Nombre
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Nombre"
                android:hint="@string/Nombre"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        //Apellido
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Apellido"
                android:hint="@string/Apellido"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        //Edad
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Edad"
                android:hint="@string/Edad"
                android:textColorHint="#000"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        //Telefono
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Telefono"
                android:hint="@string/Telefono"
                android:textColorHint="#000"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        //Dirección
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Direccion"
                android:hint="@string/Direccion"
                android:textColorHint="#000"
                android:inputType="textCapWords|textAutoCorrect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        //Registrar Usuario

        <Button
            android:id="@+id/RegistrarUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/boton_personalizado"
            android:onClick="Regist"
            android:text="@string/RegistrarUser"
            android:textColor="#fff"
            app:backgroundTint="@null"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>