<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="15sp">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/log" />

        <!--Correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/CorreoLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_ico"
                android:drawablePadding="10dp"
                android:hint="@string/CorreoLogin"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="#000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Contraseña-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/PasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/pass_ico"
                android:drawablePadding="10dp"
                android:hint="@string/PasswordLogin"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColorHint="#000" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Botón-->
        <Button
            android:id="@+id/INGRESAR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/boton_personalizado"
            android:onClick="ingresa"
            android:layout_marginTop="10dp"
            android:text="@string/INGRESAR"
            android:textColor="#fff"
            app:backgroundTint="@null" />

        <!--Botón Google-->
        <Button
            android:id="@+id/INGRESARGOOGLE"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boton_personalizado_dos"
            android:drawablePadding="15dp"
            android:padding="10dp"
            android:text="@string/INGRESARGOOGLE"
            android:textColor="#000"
            app:backgroundTint="@null"
            app:icon="@drawable/google_ico"
            app:iconTint="@null"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>